<resources>
    <string name="app_name">adidevibm</string>
    <string name="random_user_button">Random user Button</string>
    <string name="image">Image</string>
    <string name="my_random_user">H :) T (: W</string>
    <string name="view_details">View details</string>
    <string name="details_name">Name: %1$s %2$s</string>
    <string name="details_email">Email: %s</string>
    <string name="details_age">Age: %s</string>
    <string name="details_location">Location: (%1$s, %2$s)</string>
    <string name="calculate_distance_button_details">Calculate distance from current location</string>
    <string name="calculate_distance_button">Calculate distance</string>
    <string name="location_random_user">Location of random user: (%1$s, %2$s)</string>
    <string name="location_phone">Location of this phone: (%1$s, %2$s)</string>
    <string name="location_result_miles">[%f] miles</string>
    <string name="imageDes">imageDes</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="refresh_random_user">Refresh random user</string>
    <string name="show_10_users">Show 10 users</string>
</resources>