<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/main_layout"
    tools:context=".ui.feature_random_user.AlternateActivity">

    <!-- TODO - DONE (2 points): Convert to ConstraintLayout -->
    <!-- TODO - DONE (1 point): Address Android Studio warnings -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_random_user"
        android:textAppearance="@style/AppTheme.textApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/main_selected_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:background="#33aaaaaa"
                android:contentDescription="@string/imageDes" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="@style/AppTheme.textAppBody"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="@style/AppTheme.textAppBody"
                    tools:text="Jon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="@style/AppTheme.textAppBody"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="@style/AppTheme.textAppBody"
                    tools:text="robert@test.com" />

            </LinearLayout>

            <Button
                android:id="@+id/main_see_details_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_details" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/main_refresh_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_selected_card"
        android:text="@string/refresh_random_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_selected_card" />


    <View
        android:id="@+id/main_divider"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="2dp"
        android:layout_below="@id/main_refresh_button"
        android:background="#11111111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_refresh_button" />


    <Button
        android:id="@+id/main_user_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_divider"
        android:layout_marginTop="8dp"
        android:text="@string/show_10_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_divider" />


    <!-- TODO - DONE (5 points): Convert to RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_user_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@id/main_user_list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_user_list_button" />



</androidx.constraintlayout.widget.ConstraintLayout>